src/objects/ContextCondition__mdt.object
<CustomObject>
    <description>Defines the condition where the Context will be applicable for the record, based on sObject (Context Type - Object) fields.</description>
    <fields>
        <fullName>Context__c</fullName>
        <description>Context record that a condition applies to.</description>
        <inlineHelpText>Context record that a condition applies to.</inlineHelpText>
        <label>Context</label>
        <referenceTo>Context__mdt</referenceTo>
        <relationshipLabel>Context Conditions</relationshipLabel>
        <relationshipName>ContextConditions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>The Context Type field name to use in the condition.</description>
        <inlineHelpText>The Context Type field name to use in the condition.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The Context Type operator to use in the condition.</description>
        <inlineHelpText>The Context Type operator to use in the condition.</inlineHelpText>
        <label>Operator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The Context Type field value to use in the condition.</description>
        <inlineHelpText>The Context Type field value to use in the condition.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Context Condition</label>
    <pluralLabel>Context Conditions</pluralLabel>
</CustomObject>